packages/admin-ui/src/pages/packages/components/packages.scss
.list-grid.dnps {
  /*
  Col 1, Fit to the link buttons / switch always
  Col 2: Shrink the text to an extend, otherwise fill all available space
  Col 3, 4: On small screens fit to the icon, otherwise to the text
  NOTE: The min values are less than the content so it collapses over the
  grid-gap space. On really small screens it helps delay the appearance of
  the lateral scrollbar
   */
  grid-template-columns:
    minmax(1.65rem, min-content)
    min-content
    minmax(5rem, auto)
    minmax(calc(var(--icon-size) / 2), min-content)
    minmax(calc(var(--icon-size) / 2), min-content);

  &.core {
    grid-template-columns:
      min-content
      minmax(1.65rem, min-content)
      minmax(5rem, auto)
      minmax(calc(var(--icon-size) / 2), min-content)
      minmax(calc(var(--icon-size) / 2), min-content);
  }

  @media screen and (max-width: 40rem) {
    grid-template-columns:
      1.5rem
      min-content
      minmax(5rem, auto)
      minmax(calc(var(--icon-size) / 2), min-content);

    .hide-on-small {
      display: none;
    }

    .state-badge {
      height: 1rem;
      border-radius: 1rem;
      .content {
        display: none;
      }
    }

    &.core {
      grid-template-columns:
        min-content
        minmax(1rem, min-content)
        minmax(5rem, auto)
        minmax(calc(var(--icon-size) / 2), min-content)
        minmax(calc(var(--icon-size) / 2), min-content);
    }
  }

  .avatar {
    width: 2rem;
    border-radius: 4px;
  }

  .actions-icon-group {
    text-align: center;
    display: flex;
    > *:not(:last-child) {
      margin-right: 0.25rem;
    }
  }

  /* Customize name inside NavLink */
  a:hover {
    color: var(--dappnode-color);
    text-decoration: none;
    transition: color 0.2s ease;
  }
  /* Width must be 100% for proper hidding on small screens */
  .state-badge {
    width: 100%;
    overflow: hidden;
    overflow-wrap: normal;
  }
  .name {
    white-space: nowrap;
    width: 100%;
    overflow: hidden;
    overflow-wrap: normal;
  }
}

.pkg-row-text {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.state-badge {
  border-radius: 6px;
  padding: 1px 5px;
  color: white;
  font-size: 90%;
  text-transform: uppercase;
}

/* Modify the buttons next to tables */

.tableAction-button {
  min-width: 75px;
}

/* PackagesViews / Controls */

.control-item {
  display: grid;
  grid-template-columns: auto 100px;
  align-items: start;
  grid-gap: var(--default-spacing);
}

/* Button file selectors */

.button-file-input {
  position: relative;

  > input {
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    width: 100%;
    margin: 0;
    padding: 0;
    opacity: 0;
  }
}

.file-manager .subtle-header {
  margin-bottom: 0.5rem;
}

// Internal packages navigation
// ============================
// On big screens
// - vertical right sided navbar
// - Display section title
// Otherwise
// - horizontal top navbar

// ####### For now hide the header and DO NOT do it responsive
// ####### the fit to screen breaks. The terminal grows beyond
// ####### the screen size

.packages-body {
  display: flex;
}

.packages-content {
  flex: auto;
  .section-subtitle:only-child,
  .section-subtitle:first-child:nth-last-child(2) {
    display: none;
  }
  > *:not(:last-child) {
    margin-bottom: var(--default-spacing);
  }
}

.pkgs-back-btn {
  font-size: 1rem;
  margin-left: -5px; // Align svg with the page padding
  display: inline-flex;
  svg {
    font-size: 1.5rem;
  }
}

